@@ -1,3 +1,7 @@
+2011-08-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	*fmtutil.c: returns a nonzero value if it fails to make a format.
+
 2011-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* getdestdir.c, mktexmf.c, mktexpk.c, mktextfm.c, mktexupd.c,
